[tool.poetry]
name = "more-dfply"
version = "0.2.0"
description = "Helper functions for the dfply package"
authors = ["Todd Iverson <tiverson@winona.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
dfply = "^0.3.3"
composable = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
